# ducky

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
src/: conversation.rs  main.rs  namespace.rs
