[package]
name = "ducky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chatgpt_rs = { version = "1.1.3", features = ["json"] }
clap = { version = "4.2.5", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.6"
tempfile = "3.5.0"
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
