[package]
name = "ducky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bat = "0.23.0"
chatgpt_rs = { version = "1.1.3", features = ["json"] }
clap = { version = "4.2.5", features = ["derive"] }
dialoguer = "0.10.4"
directories = "5.0.0"
hex = "0.4.3"
rustyline = "11.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
sha2 = "0.10.6"
tempfile = "3.5.0"
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
