[package]
name = "ducky"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description = "ducky is a CLI GPT chat tool designed to act as a programming rubber ducky."
repository = "https://github.com/dgbuckley/ducky"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
atty = "0.2.14"
bat = "0.23.0"
chatgpt_rs = { version = "1.1.3", features = ["json"] }
clap = { version = "4.2.5", features = ["derive"] }
directories = "5.0.0"
hex = "0.4.3"
rustyline = "11.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
sha2 = "0.10.6"
tempfile = "3.5.0"
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.7.3"
